fixed overlap for mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,7 +28,7 @@ html::-webkit-scrollbar-thumb{
 
 @media screen and (max-width: 418px) {
   #overlap {z-index: 3;
-	margin-bottom: 330px;
+	margin-bottom: 360px;
 	background-color: white;}
 }
 
